# CH-MOA-ROS

./: CMakeLists.txt  README.md  package.xml
evaluation/: bias_0.txt
include/: convex_optimize_fitting.h
launch/: run.launch  run_rviz.launch  run_travel.launch
rviz/: convex_optimize_fitting.rviz
src/: convex_optimize_fitting.cpp
